--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -126,3 +126,103 @@ img.top {
     line-height: 2em;
     font-style: italic;
 }
+
+#searchcontainer{
+margin-top: 50px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+
+form.searching input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 60%;
+  background: #f1f1f1;
+  margin-left: 10%;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+form.searching button {
+  float:left;
+  width: 20%;
+  padding: 10px;
+  font-size: 20px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+  background: black;
+  color: white;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+form.searching button:hover {
+  background:orange;
+}
+
+form.searching::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+#food-items{
+  display:grid;
+  grid-template-columns: repeat(3 1fr);
+  grid-template-columns: auto auto;
+  gap: 100px;
+  justify-content: space-around;
+  margin-top: 20px;
+  height: 1800px;
+}
+.meal{
+height:500px;
+width: 500px;
+text-align:center;
+box-shadow:0 4px 21px -12px rgba(0, 0, 0,0.79);
+
+}
+
+
+.meal img{
+  width: 60%;
+  height: 60%;
+  border: 4px solid orange;
+  border-radius:50%;
+  display: block;
+  margin-left: 80px;
+  margin-top: 50px;
+  
+
+}
+
+
+.meal-info{
+  position: absolute;
+  height: 450px;
+  width: 450px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0;
+  line-height: 2em;
+  text-align: center;
+  padding: 50px;
+  overflow: scroll;
+}
+
+.meal:hover .meal-info{
+  opacity: 1;
+}
+
+.meal h3{
+font-family: 'Courier New', Courier, monospace;
+font-size: 20px;
+color: orange;
+}
