--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -238,7 +238,7 @@ margin-bottom: 10px;
 
 
 #tab{
-  margin-top: 50px;
+  margin-top: 120px;
   display: flex;
   justify-content: space-around
 
@@ -266,9 +266,6 @@ margin-bottom: 10px;
   color: black;
 
 }
-#content:hover{
-  background-image: url("../IMAGES/back.jpg");
-}
 
 #contact > p {
   font-size: 16px;
@@ -277,4 +274,20 @@ margin-bottom: 10px;
 #about{
 background-color: black;
 color: white;
+}
+
+
+/*footer*/
+
+.footer{
+  width: 100%;
+  height: 50px;
+  background-color:black;
+  color:orange;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  padding-top: 20px;
+  font-weight: 700;
+  font-size: 20px;
 }
